[package]
name = "dz6"
version = "0.4.1"
edition = "2024"
description = "A vim-inspired, TUI-based hexadecimal editor"
readme = "README.md"
homepage = "https://menteb.in/dz6"
repository = "https://github.com/mentebinaria/dz6"
license = "GPL-3.0-or-later"
keywords = ["hex-editor", "reverse-engineering", "binary", "pe", "elf"]
categories = ["command-line-utilities", "security"]


[dependencies]
arboard = { version = "3", default-features = false }
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
directories-next = "2.0.0"
encoding_rs = "0.8.35"
evalexpr = "12.0.2"
hex = "0.4.3"
ratatui = "0.29.0"
regex = "1.11.2"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.0"
toml = "0.9.8"
tui-input = "0.14.0"
mmap-io = { version = "0.9.4" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
